echoserver-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-canary
spec:
  selector:
    matchLabels:
      app: echoserver-canary
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver-canary
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.4
        imagePullPolicy: Always
        name: echoserver-canary
        ports:
        - containerPort: 8080
