service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver2-canary
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: echoserver-canary
